Add default values for title and author, closes #9

--- a/bmc-ref.sty
+++ b/bmc-ref.sty
@@ -15,6 +15,9 @@
 	\RequirePackage{etoolbox}
 \fi
 
+\renewcommand{\@title}{}
+\renewcommand{\@author}{}
+
 \RequirePackage[
 	pdfa,
 	unicode=true, % loads with unicode support
