Fix spelling of "quaternary"

--- a/bmc-color.sty
+++ b/bmc-color.sty
@@ -54,7 +54,7 @@
 
 \definecolor{tertiary}{HTML}{C47238} % yellow
 \definecolor{secondary}{HTML}{C6B53C} % orange
-\definecolor{quatrinary}{HTML}{BD3E4C} % red
+\definecolor{quaternary}{HTML}{BD3E4C} % red
 
 \definecolor{alternativePrimary}{HTML}{13293D} % blue
 
