--- a/bmc.cls
+++ b/bmc.cls
@@ -190,7 +190,7 @@
 		xlabel near ticks,
 		ylabel near ticks,
 		% -- COLOURS
-		cycle list={quatrinary\\secondary\\primary\\tertiary\\},
+		cycle list={quaternary\\secondary\\primary\\tertiary\\},
 		%
 		every axis plot/.append style={
 			very thick,
