Move code that should be in bmc-font from bmc

--- a/bmc-fonts.sty
+++ b/bmc-fonts.sty
@@ -206,6 +206,8 @@
 % =========
 
 \linespread{1.15}
+\@beginparpenalty=10000 % don't like it when a paragraph title is on a different page to the start of the content
+\hyphenpenalty=500 % not a huge fan of hyphens, but they are worthwhile
 % See Bringhurst (2004) ¶ 2.4.1
 \lefthyphenmin=2
 \righthyphenmin=3
